--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,11 +2,27 @@ h1{
     text-align: center;
     color: blue;
 }
-
-.content{
+.elements{
     text-align: center;
 }
-
-table{
+.content{
+    text-align: center;
+    max-width: 300px;
+    border: 1px solid black;
     margin: auto;
+    border-radius: 3px;
+}
+
+
+.label_content{
+    justify-content: space-between;
+    text-align: center;
+    display: flex;
+    padding-left: 5px;
+    padding-right: 5px;
+
+    button{
+        margin-left: auto;
+    }
+
 }
