--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,28 +1,78 @@
-h1{
-    text-align: center;
-    color: blue;
-}
-.elements{
-    text-align: center;
-}
-.content{
-    text-align: center;
-    max-width: 300px;
-    border: 1px solid black;
-    margin: auto;
-    border-radius: 3px;
+body {
+    background-color: green;
 }
 
-
-.label_content{
-    justify-content: space-between;
+header {
     text-align: center;
-    display: flex;
-    padding-left: 5px;
-    padding-right: 5px;
-
-    button{
-        margin-left: auto;
+    .header-input {
+        margin-top: 25px;
+        background-color: #f0f0f4;
+        border-radius: 3px;
+        padding: 5px 20px;
+        border: none;
+        font-size: 16px;
+        line-height: 19px;
+        outline: none;
+        width: 25%;
+        height: 50px;
     }
 
+    .header-input::placeholder{
+        color: #656464;
+    }
+
+    button{
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 17px;
+        letter-spacing: 0.12em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        background: green;
+        border-radius: 3px;
+        padding: 17px 41px;
+        border: none;
+        margin-left: -3px;
+        cursor: pointer;
+    }
+    
+
+}
+
+
+
+.card-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    .card {
+        border: 1px solid black;
+        max-width: 200px;
+        height: 200px;
+        white-space: normal;
+        text-align: center;
+        margin-top: 15px;
+        border-radius: 3px;
+        padding: 5px;
+
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 17px;
+        letter-spacing: 0.12em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        background: #1C62CD;
+        padding: 17px 41px;
+        border: none;
+        cursor: pointer;
+    }
+    
+    .card:hover {
+        box-shadow: 0px 0px 15px rgba(10, 20, 40, 0.6);
+        transition: all 0.3s;
+        cursor: pointer;
+    }
+    
+  
 }
