--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -44,7 +44,8 @@ header {
 .card-section {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding: 40px;
 
     .card {
         border: 1px solid black;
@@ -55,7 +56,7 @@ header {
         margin-top: 15px;
         border-radius: 3px;
         padding: 5px;
-
+        position: relative;
         font-weight: bold;
         font-size: 14px;
         line-height: 17px;
@@ -73,6 +74,25 @@ header {
         transition: all 0.3s;
         cursor: pointer;
     }
+
+    .card:hover button{
+        opacity: 1;
+    }
+
+    button{
+        position: absolute;
+        border-radius: 50%;
+        height: 30px;
+        width: 30px;
+        outline: none;
+        opacity: 0;
+        cursor: pointer;
+        top: 0;
+        left: 165px;
+        background-color: initial;
+    }
+
+    
     
   
 }
