--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,36 @@
 <header class="header">
   <h1>{{title}}</h1>
-  <input class="header-input" type="text" #newCard>
+  <input class="header-input" type="text" placeholder="Write a name" #newCard>
   <button (click)="addCard(newCard.value)">Add</button>
 </header>
 
+<div class="amount-card">
+  <input placeholder="Write number" min="1" max="5" type="number" #Mynum>
+  <button (click)="countEls(Mynum)">Count</button>
+</div>
+
+
+
 <section class="card-section">
-  <div *ngFor="let card of Cards">
-    <div *ngIf="card.label" class="card">{{card.label}}
+  <div *ngFor="let card of Cards.slice(0,inputNum);">
+    <div class="card">{{card.label}}
       <p>{{card.text}}</p>
       <button (click)="deleteCard(card)">❌</button>
     </div>
   </div>
 </section>
+
+
+
+<div class="center">
+  <div class="pagination">
+    <a href="#">&laquo;</a>
+    <a href="#">1</a>
+    <a href="#" class="active">2</a>
+    <a href="#">3</a>
+    <a href="#">4</a>
+    <a href="#">5</a>
+    <a href="#">6</a>
+    <a href="#">&raquo;</a>
+  </div>
+</div>
