--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,36 +1,24 @@
 <header class="header">
   <h1>{{title}}</h1>
-  <input class="header-input" type="text" placeholder="Write a name" #newCard>
-  <button (click)="addCard(newCard.value)">Add</button>
+  <input class="header-input" type="text" placeholder="Write a name" #card>
+  <button (click)="addCard(card.value)">Add</button>
 </header>
 
 <div class="amount-card">
-  <input placeholder="5" min="1" max="5" type="number" #Mynum>
-  <button (click)="countEls(Mynum)">Count</button>
+  <input placeholder="5" min="1" max="5" type="number" #num>
+  <button (click)="countEls(num)">Count</button>
 </div>
 
 
-
 <section class="card-section">
-  <div *ngFor="let card of Cards.slice(startIndex,endIndex);
-        let i = index;
-  ">
-    <div class="card">
-      <p #cardLabel >{{card.label}}</p>
-      <input class="editinput" #InputCardLabel id={{card.id}} placeholder="new label">
-      <button class="delete-card-btn" (click)="deleteCard(card)">❌</button>
-      <button class="okaybtn" (click)="editCardTitle(InputCardLabel,okaybtn)" #okayBtn >👌</button>
-      <button class="editbtn" (click)="showInput(InputCardLabel)">🖋️</button>
-    </div>
-  </div>
+  <app-card-component class="card" *ngFor="let card of cards.slice(startIndex, endIndex)" [card]="card"></app-card-component>
 </section>
 
-
-
+ <!--Pagination-->
 <div class="center">
-  <ul #pagination class="pagination">
-    <div *ngIf="pagArray.length > 1">
-      <a (click)="updateIndex(j)" *ngFor="let i of pagArray; let j = index" href="#">{{j+1}}&nbsp;</a>
+  <ul class="pagination">
+    <div *ngIf="paginationList.length > 1">
+      <a (click)="updateIndex(idx)" *ngFor="let i of paginationList; let idx = index" href="#">{{idx + 1}}&nbsp;</a>
     </div>
   </ul>
 </div>
