--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,185 @@ body {
     line-height: 24px;
     font-weight: 40;
 }
+
+header {
+  text-align: center;
+  .header-input {
+    margin-top: 25px;
+    background-color: #f0f0f4;
+    border-radius: 3px;
+    padding: 5px 20px;
+    border: none;
+    font-size: 16px;
+    line-height: 19px;
+    outline: none;
+    width: 25%;
+    height: 50px;
+  }
+
+  .header-input::placeholder {
+    color: #656464;
+  }
+
+  button {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    color: #ffffff;
+    background: green;
+    border-radius: 3px;
+    padding: 17px 41px;
+    border: none;
+    margin-left: -3px;
+    cursor: pointer;
+  }
+}
+
+
+.amount-card {
+  text-align: center;
+
+  input {
+    margin-top: 25px;
+    background-color: #f0f0f4;
+    border-radius: 3px;
+    padding: 5px 20px;
+    border: none;
+    font-size: 16px;
+    line-height: 19px;
+    outline: none;
+    width: 10%;
+    height: 50px;
+  }
+
+  input::placeholder {
+    color: #656464;
+  }
+
+  button {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 14px;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    color: #ffffff;
+    background: green;
+    border-radius: 3px;
+    padding: 17px 10px;
+    border: none;
+    margin-left: -3px;
+    cursor: pointer;
+  }
+}
+
+.amount-card {
+  text-align: center;
+
+  input {
+    margin-top: 25px;
+    background-color: #f0f0f4;
+    border-radius: 3px;
+    padding: 5px 20px;
+    border: none;
+    font-size: 16px;
+    line-height: 19px;
+    outline: none;
+    width: 10%;
+    height: 50px;
+  }
+
+  input::placeholder {
+    color: #656464;
+  }
+
+  button {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 14px;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    color: #ffffff;
+    background: green;
+    border-radius: 3px;
+    padding: 17px 10px;
+    border: none;
+    margin-left: -3px;
+    cursor: pointer;
+  }
+}
+
+.card-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 40px;
+
+  .card {
+    border: 1px solid black;
+    width: 200px;
+    height: 200px;
+    white-space: normal;
+    text-align: center;
+    margin-top: 15px;
+    border-radius: 3px;
+    padding: 5px;
+    position: relative;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0.12em;
+    text-transform: uppercase;
+    color: #ffffff;
+    background: #1c62cd;
+    padding: 17px 41px;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+  }
+
+  .card:hover {
+    box-shadow: 0px 0px 15px rgba(10, 20, 40, 0.6);
+    transition: all 0.3s;
+    cursor: pointer;
+  }
+
+  .card:hover .delete-card-btn {
+    opacity: 1;
+  }
+  .card:hover .editBtn{
+    opacity: 1;
+  }
+
+
+  .delete-card-btn {
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    outline: none;
+    cursor: pointer;
+    background-color: initial;
+    border: 0;
+    z-index: 10;
+    opacity: 0;
+  }
+
+  .editInput{
+    opacity: 1;
+    width: 100px;
+  }
+
+  .editBtn{
+    opacity: 0;
+    background: initial;
+    border: none;
+    outline: none;
+    cursor: pointer;
+  }
+
+}
+
+.center {
+  text-align: center;
+}
